bpo-42827: Fix crash when determining the error location of multi-line expressions